# led-matrix-application

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.dev  Dockerfile.pillow-wheel  README.md  docker-compose.yml  pyproject.toml  setup-env.sh  start.sh  stop.sh
.github/workflows/: build-and-push.yml  build-pillow.yml  docker-build.yml
led_matrix_application/: api.py  brightness_scheduler.py  controller.py  database.py  emulator_config.json  led_matrix_controller.py  main.py  solar_time_service.py  state.json  state_manager.py
led_matrix_application/fonts/: clock.bdf
led_matrix_application/fonts/tamzen/: 1.bdf  2.bdf  3.bdf  4.bdf  5.bdf
led_matrix_application/mode/: abstract_mode.py  clock_mode.py  idle_mode.py  image_mode.py  music_mode.py  text_mode.py
led_matrix_application/ws/: wsclient.py  wsmethods.py
scripts/: dev.sh  generate_spotify_cache.py  generate_spotify_cache.sh  start.sh
src/: pyproject.toml
src/led_matrix_application/: controller.py  emulator_config.json  led_matrix_controller.py  main.py  utils.py
src/led_matrix_application/mode/: abstract_mode.py  clock_mode.py  idle_mode.py  image_mode.py  music_mode.py  text_mode.py
src/led_matrix_application/ws/: wsclient.py
