[tool.poetry]
name = "led-matrix-application"
version = "0.1.0"
description = ""
authors = ["tsomic <keller.nils99@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.taskipy.tasks]
start = "bash scripts/start.sh"
dev = "bash scripts/dev.sh"
generate_spotify_cache = "bash scripts/generate_spotify_cache.sh"

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.47.0"
hypercorn = "^0.17.0"
pyowm = "^3.3.0"
python-dotenv = "^1.1.0"
pillow = "^11.3.0"
python-multipart = "^0.0.20"
spotipy = "^2.25.0"
setuptools = "^80.9.0"

[tool.poetry.group.dev.dependencies]
rgbmatrixemulator = "^0.13.0"
taskipy = "^1.14.0"
watchdog = {extras = ["watchmedo"], version = "^6.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
