[tool.poetry]
name = "led-matrix-application"
version = "0.1.0"
description = ""
authors = ["tsomic <keller.nils99@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.taskipy.tasks]
start = "bash scripts/start.sh"
dev = "bash scripts/dev.sh"
generate_spotify_cache = "bash scripts/generate_spotify_cache.sh"

[tool.poetry.dependencies]
python = "^3.13"
starlette = "^0.50.0"
hypercorn = "^0.18.0"
pyowm = "^3.5.0"
python-dotenv = "^1.2.1"
pillow = "^12.0.0"
python-multipart = "^0.0.20"
spotipy = "^2.25.1"
setuptools = "^80.9.0,<81"

[tool.poetry.group.dev.dependencies]
rgbmatrixemulator = "^0.14.1"
taskipy = "^1.14.1"
watchdog = {extras = ["watchmedo"], version = "^6.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
